updating github poster for auth